Archive2/40/8b8d7fe694e379/output
main.cpp:2:44: error: in-class initialization of static data member 'char foo::thingy []' of incomplete type
     static char thingy[] = { 'F', 'O', 'O' };
                                            ^
main.cpp:3:1: error: expected ';' after class definition
 }
 ^
